[gd_scene load_steps=18 format=2]

[ext_resource path="res://SISTEMA/ENTES/Enemigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://RECURSOS/SHADERS/Pixelar_Sprite.gdshader" type="Shader" id=2]
[ext_resource path="res://RECURSOS/IMAGENES/ENEMIGOS/DinoBoss/D-Moler_MechaSaurus_Ensamblado.png" type="Texture" id=3]
[ext_resource path="res://SISTEMA/ENTES/Usados/AnimDinoBoss.tscn" type="PackedScene" id=4]
[ext_resource path="res://SISTEMA/ENTES/Usados/DinoBoss.gd" type="Script" id=5]
[ext_resource path="res://SISTEMA/ENTES/Usados/MEF_DinoBoss.gd" type="Script" id=6]
[ext_resource path="res://SISTEMA/GUI/BarraVidaBosses.tscn" type="PackedScene" id=7]
[ext_resource path="res://RECURSOS/IMAGENES/ENEMIGOS/DinoBoss/retrato.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/pixelFactor = 1.0

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46, 109.25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 41, 213.5 )

[sub_resource type="Gradient" id=28]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="Gradient" id=30]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.601563, 0.601563, 1 )

[sub_resource type="GradientTexture2D" id=31]
gradient = SubResource( 30 )
fill_to = Vector2( 0, 0.510417 )
repeat = 2

[node name="DinoBoss" groups=["Persistentes"] instance=ExtResource( 1 )]
collision_layer = 128
collision_mask = 512
script = ExtResource( 5 )
max_vitalidad = 1800
vitalidad = 1800
posibles_objetos_soltar = [  ]
numero_llamas_superataque = 20

[node name="Viewport" type="Viewport" parent="." index="0"]
size = Vector2( 350, 600 )
transparent_bg = true
render_target_v_flip = true

[node name="MEF" parent="." index="1"]
script = ExtResource( 6 )

[node name="Sprite" parent="Cuerpo" index="0"]
material = SubResource( 2 )
position = Vector2( -47, -117 )
scale = Vector2( 1, 1 )
texture = SubResource( 4 )
offset = Vector2( 23.75, -57.5 )
region_rect = Rect2( 187.204, 64.1984, 188.919, 220.528 )

[node name="AnimatedSprite" parent="Cuerpo" index="1"]
visible = false
material = SubResource( 1 )

[node name="Control" parent="Cuerpo" index="2" instance=ExtResource( 4 )]
position = Vector2( -1, -146 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2( -3, -81.75 )
shape = SubResource( 3 )

[node name="Label_debug" parent="." index="6"]
margin_left = -279.0
margin_top = -81.0
margin_right = -239.0
margin_bottom = -67.0

[node name="D-MolerMechaSaurusEnsamblado" type="Sprite" parent="." index="7"]
visible = false
position = Vector2( 251, -5 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="8"]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( -7, -190.5 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="." index="9"]
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 0, -159 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 512

[node name="Rayo_frente" type="RayCast2D" parent="." index="10"]
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 0, -159 )
enabled = true
cast_to = Vector2( -400, 0 )
collision_mask = 512

[node name="pos_misil1" type="Position2D" parent="." index="11"]
position = Vector2( -139, 31 )

[node name="pos_misil2" type="Position2D" parent="." index="12"]
position = Vector2( -297, 35 )

[node name="pos_misil3" type="Position2D" parent="." index="13"]
position = Vector2( -470, 35 )

[node name="Rayo_bolas_fuego" type="RayCast2D" parent="." index="14"]
position = Vector2( -30, -166 )
enabled = true
cast_to = Vector2( -1000, 0 )
collision_mask = 512

[node name="CanvasLayer_BarraVida" parent="." index="15" instance=ExtResource( 7 )]
layer = 40

[node name="barra_vida" parent="CanvasLayer_BarraVida/GUI_miniboss" index="0"]
max_value = 1800.0
value = 1800.0
texture_under = SubResource( 29 )
texture_progress = SubResource( 31 )

[node name="TextureRect" parent="CanvasLayer_BarraVida/GUI_miniboss" index="1"]
texture = ExtResource( 8 )

[editable path="CanvasLayer_BarraVida"]
